[tool.poetry]
name = "repl_python3_Omegle-Community-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["2seqc <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
